<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_books">

    <fragment
        android:id="@+id/navigation_my_books"
        android:name="com.example.booktrack.ui.my_books.MyBooksFragment"
        android:label="@string/title_my_books"
        tools:layout="@layout/fragment_my_books" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.booktrack.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.example.booktrack.ui.my_profile.MyProfileFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.booktrack.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>